--- a/templates/department.html
+++ b/templates/department.html
@@ -9,7 +9,7 @@
             id="search-form-top"
         >
             <div class="search-form-title margin-bottom-med">
-                <span class="heading-primary">Picker by departments:</span>
+                <span class="heading-primary">Filter mappings by departments:</span>
             </div>
             <form action="/department" method="post">
                 <div class="form-group margin-bottom-med">
@@ -91,7 +91,7 @@
                 </select>
                 </div>
                 <button class="btn-primary margin-top-med" type="submit">
-                    Calculate
+                    Display
                 </button>
             </form>
 
