--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,6 +26,7 @@
 
     </head>
     <body>
+      <!-- <p>{{school_mappings}}</p> -->
         <div class="navigation">
             <nav class="navigation__nav">
                 <div class="navigation__name">
@@ -41,7 +42,7 @@
         </div>
         {%block main%}{%endblock%}
         <footer class="small text-center text-muted" style="background-color: white;">
-            A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee. Last updated 8 Jan 2020. 
+            A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee. Last updated 8 Jan 2020.
             <a href = "mailto: nussepicker@gmail.com">Email us </a> to contribute module mapping data.
         </footer>
         <script>
