--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,7 @@
         {%block main%}{%endblock%}
         <footer class="small text-center text-muted" style="background-color: white;">
             A Hack & Roll 2021 Project by Tang Boxuan, Yeo Zhi Long, Sherwin Poh and Benjamin Lee. Last updated 8 Jan 2020.
-            <a href = "mailto: nussepicker@gmail.com">Email us </a> to contribute module mapping data.
+            <a href = "https://github.com/tangboxuan/SEPicker">Source Code</a>.
         </footer>
         <script>
           if ( window.history.replaceState ) {
